# yt-dlp-tauri

./: .gitignore  claude.md  package-lock.json  package.json  vite.config.ts
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: build.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ytdlp/: downloader.rs  manager.rs  mod.rs  updater.rs
src/__tests__/: css-loading.test.ts
src/components/: AppHeader.vue  DownloadForm.vue  DownloadList.vue  SetupScreen.vue
src/stores/: app.ts  download.ts
src/types/: index.ts
